# aiida-optimade

./: .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  config.py  docker-compose.yml  local_openapi.json  optimade_api.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_testing.txt  resources.py  run.sh  server_template.cfg  setup.cfg  setup.json  setup.py  tasks.py  transformers.py  utils.py
.ci/: .pre-commit-config.yaml  aiida-version.json  assert_version.py  codecov-validator.sh  optimade-version.json  optimade_version_update.py
.docker/: config.j2  config.json  run.sh  server_template.cfg
.github/: dependabot.yml
.github/aiida/: optimade.aiida  profile.yaml  setup_aiida.sh
.github/mongo/: ci_config.json  load_data.py  mongo_ci_config.json  test_structures_mongo.json
.github/static/: .env  .env.ci  ci_config.json  update_version.sh
.github/utils/: single_dependency_pr_body.txt  update_version.sh
.github/workflows/: cd_release.yml  ci.yml  ci_automerge_dependabot.yml  ci_dependabot.yml  ci_tests.yml  ci_updated_default_branch.yml  publish-on-pypi.yml
aiida_optimade/: aiida_session.py  collections.py  collections_test.py  config.ini  config.json  config.py  deps.py  entry_collections.py  exceptions.py  local_openapi.json  main.py  middleware.py  query_params.py  utils.py
aiida_optimade/cli/: __init__.py  cmd_aiida_optimade.py  cmd_calc.py  cmd_init.py  cmd_recalc.py  cmd_run.py  options.py  utils.py
aiida_optimade/common/: __init__.py  exceptions.py  logger.py  warnings.py
aiida_optimade/data/: links.json
aiida_optimade/mappers/: __init__.py  entries.py  structures.py
aiida_optimade/models/: __init__.py  baseinfo.py  entries.py  index_metadb.py  jsonapi.py  links.py  modified_jsonapi.py  optimade_json.py  structures.py  toplevel.py  util.py
aiida_optimade/models/parsers/: structures.py
aiida_optimade/parsers/: __init__.py  entities.py  exceptions.py  structures.py
aiida_optimade/routers/: info.py  links.py  references.py  structures.py  utils.py
aiida_optimade/tests/: test_more_structures.json  test_server.py
aiida_optimade/transformers/: __init__.py  aiida.py
aiida_optimade/translators/: __init__.py  cifs.py  entities.py  structures.py  utils.py
common/: config.py  utils.py
common/flask_configs/: v0.9.7a.py
mcloud/: optimade-config-json.j2  optimade-config-mongo-json.j2  server_template.j2
profiles/: config.j2  docker-compose-mongo.j2  docker-compose-mongo.yml  docker-compose.j2  docker-compose.yml  quicksetup.json  test_django.json  test_psql_dos.json
tests/: conftest.py  test_config.json  test_server.py
tests/cli/: conftest.py  test_calc.py  test_init.py  test_recalc.py  test_run.py
tests/cli/static/: cif_data_nodes.aiida  initialized_nodes.aiida  initialized_structure_nodes.aiida  structure_data_nodes.aiida
tests/filtertransformers/: test_aiida.py
tests/server/: conftest.py  test_entry_collections.py  test_middleware.py  test_optimade_validation.py  test_query_params.py  test_server_misc.py  test_server_validation.py  utils.py
tests/server/query_params/: test_filter.py  test_page_limit.py  test_page_offset.py  test_response_fields.py  test_sort.py
tests/server/routers/: test_info.py  test_links.py  test_references.py  test_response.py  test_structures.py  test_versions.py
tests/static/: test_config.json  test_data_curation_config.json  test_mongo_config.json
tests/transformers/: test_aiida.py
