[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiida-optimade"
authors = [
    {name = "Casper Welzel Andersen", email = "developers@aiida.net"},
]
description = "Expose an AiiDA database according to the [OPTIMADE API specification](https://www.optimade.org)."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AiiDA",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Database :: Front-Ends",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics"
]
keywords = ["OPTIMADE", "AiiDA", "materials"]
requires-python = "~=3.8"
dynamic = ["version"]

dependencies = [
    "optimade[server] ~=0.20.3",
    "aiida-core ~=2.2.1",
    "pymatgen >=2019.7.2,!=2019.9.7,<2023.1.10",
]
# Dependencies used directly in this package, but included through other dependencies:
# aiida-core:
#   click
#   click-completion
#   tqdm
# optimade:
#   pydantic
#   fastapi
#   uvicorn
#   pymongo
#   mongomock

[project.optional-dependencies]
testing = [
    "codecov ~=2.1",
    "httpx ~=0.23.3",
    "pgtest ~=1.3",
    "pytest ~=7.2",
    "pytest-cov ~=4.0",
]
dev = [
    "codecov ~=2.1",
    "httpx ~=0.23.3",
    "pgtest ~=1.3",
    "pytest ~=7.2",
    "pytest-cov ~=4.0",
    "invoke ~=2.0",
    "pre-commit ~=2.21",
    "pylint ~=2.15",
]

[project.urls]
Home = "https://github.com/aiidateam/aiida-optimade"
Source = "https://github.com/aiidateam/aiida-optimade"
"Issue Tracker" = "https://github.com/aiidateam/aiida-optimade/issues"
Changelog = "https://github.com/aiidateam/aiida-optimade/blob/develop/CHANGELOG.md"
Package = "https://pypi.org/project/aiida-optimade"

[project.scripts]
aiida-optimade = "aiida_optimade.cli.cmd_aiida_optimade:cli"

[tool.flit.module]
name = "aiida_optimade"

[tool.flit.sdist]
include = ["aiida_optimade/*.json", "aiida_optimade/data/*.json"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true

[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "duplicate-code",
    "missing-module-docstring",
    # "locally-disabled",
    "fixme",
    # "too-many-instance-attributes",
]
good-names = ['i', 'j', 'k', 'ex', 'Run', '_', 'pk']
max-attributes = 10

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-rs --cov=aiida_optimade --cov-report=term"
filterwarnings = [
    # "ignore:.*imp module.*:DeprecationWarning",
    # "ignore:.*_yaml extension module.*:DeprecationWarning",
    "ignore:.*PY_SSIZE_T_CLEAN will be required for '#' formats.*:DeprecationWarning",
    'ignore:.*"@coroutine" decorator is deprecated since Python 3.8, use "async def" instead.*:DeprecationWarning',
    "ignore:.*Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated.*:DeprecationWarning",
    "ignore:Parsing optional attribute.*:UserWarning",
]
